modified:   models/modules.py 	modified:   notebooks/decoder_only_gpt.ipynb

--- a/notebooks/decoder_only_gpt.ipynb
+++ b/notebooks/decoder_only_gpt.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
        "array([ 401, 6799, 2856,   17], dtype=uint16)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
        "array([  37, 3346, 3752, 2856, 1768, 2239, 3681, 1231,   62], dtype=uint16)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
        "['', ' hello', ' world', ' test', ' mon', 'ster', ' token', 'ize', 'r']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
      "output_type": "stream",
      "text": [
       "torch.Size([8, 8]) torch.Size([8, 8])\n",
-      "when input is [7040, 662] the target: 3\n"
+      "when input is [497, 56] the target: 554\n"
      ]
     }
    ],
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,16 +289,138 @@
     "    \"\"\"\n",
     "    zepto because it's a really small GPT\n",
     "    \"\"\"\n",
-    "    def __init__(self, d_k, d_model, d_v, d_ff, num_heads, num_layers, num_classes, vocab_size, dropout=0.1) -> None:\n",
+    "    def __init__(self, d_k, d_model, d_v, d_ff, num_heads, num_layers, vocab_size, dropout=0.1) -> None:\n",
     "        super().__init__()\n",
-    "        self.decoder_transformer = Transformer(d_k, d_model, d_v, d_ff, num_heads, num_layers, num_classes, vocab_size, dropout, mask=True)\n",
+    "        self.decoder_transformer = Transformer(d_k, d_model, d_v, d_ff, num_heads, num_layers, vocab_size=vocab_size, mask=True, dropout=dropout)\n",
     "        self.dropout = nn.Dropout(dropout)\n",
     "        self.fc = nn.Linear(d_model, vocab_size)\n",
     "    \n",
     "    def forward(self, x):\n",
     "        out = self.decoder_transformer(x)\n",
-    "        out = self.dropout(self.fc(out))\n",
-    "        return nn.functional.softmax(out)"
+    "        return self.dropout(self.fc(out))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train(model, train_loader, val_loader, loss_function, optim, epochs, device):\n",
+    "    losses = [] #group losses for loss visualization \n",
+    "    running_loss = 0.0\n",
+    "    val_losses = []\n",
+    "    for epoch in range(epochs):\n",
+    "        model.train()\n",
+    "        print(\"Epoch %d / %d\" % (epoch+1, epochs))\n",
+    "        print(\"-\"*10)\n",
+    "    \n",
+    "        for i, batch_data in enumerate(train_loader):\n",
+    "            x, y = batch_data\n",
+    "            logits = model(x)\n",
+    "            print(logits.shape)\n",
+    "            print(y.shape)\n",
+    "            loss = loss_function(logits, y)\n",
+    "            optim.zero_grad()\n",
+    "            loss.backward()\n",
+    "            optim.step()\n",
+    "            running_loss += loss.item()\n",
+    "            losses.append(loss)\n",
+    "\n",
+    "            if (i+1) % 1000 == 0:\n",
+    "                print(\"Step: {}, average training loss over last 2000 steps: {:.4f}\".format(i+1, running_loss/1000))\n",
+    "                running_loss = 0.0\n",
+    "\n",
+    "        model.eval()\n",
+    "        val_loss = 0.0\n",
+    "        with torch.no_grad():\n",
+    "            correct_pred = 0.0\n",
+    "            num_samples = 0\n",
+    "            for i, batch_data in enumerate(val_loader):\n",
+    "                (y, x, x_size) = batch_data\n",
+    "                y, x, x_size = y.to(device), x.to(device), x_size.to(device)\n",
+    "                logits = model(x)\n",
+    "                loss = loss_function(logits, y)\n",
+    "                _, predicted_labels = torch.max(logits, 1)\n",
+    "                correct_pred += (predicted_labels.long() == y.long()).sum()\n",
+    "                num_samples+=predicted_labels.shape[0]\n",
+    "                val_loss += loss.item()\n",
+    "            \n",
+    "            val_accuracy = (correct_pred / num_samples) * 100\n",
+    "            val_losses.append(val_loss)\n",
+    "        print(\"Epoch: {}, validation loss: {:.4f}, val accuracy: {:.2f}\".format(epoch+1, val_loss/len(val_loader), val_accuracy))\n",
+    "    \n",
+    "    return losses, val_losses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LEARNING_RATE = 1e-3\n",
+    "NUM_EPOCHS = 50\n",
+    "DROPOUT = 0.2\n",
+    "DEVICE = torch.device('cuda:0' if torch.cuda.is_available() else 'cpu')\n",
+    "D_K = 128\n",
+    "D_V = D_K\n",
+    "D_MODEL = D_K * 2\n",
+    "D_FF = D_MODEL * 4\n",
+    "NUM_LAYERS = 4\n",
+    "OUTPUT_DIM = 4\n",
+    "VOCAB_SIZE = vocab.vocab_size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = zeptoGPT(D_K, D_MODEL, D_V, D_FF, num_heads=8, num_layers=2, vocab_size=VOCAB_SIZE)\n",
+    "model = model.to(DEVICE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "optimizer = torch.optim.AdamW(model.parameters(), lr=LEARNING_RATE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1 / 50\n",
+      "----------\n",
+      "torch.Size([32, 8, 8000])\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "Expected target size [32, 8000], got [32, 8]",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[40], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m train_loss, val_loss \u001b[39m=\u001b[39m train(model, train_loader, val_loader, torch\u001b[39m.\u001b[39;49mnn\u001b[39m.\u001b[39;49mfunctional\u001b[39m.\u001b[39;49mcross_entropy, optimizer, NUM_EPOCHS, DEVICE)\n",
+      "Cell \u001b[0;32mIn[36], line 14\u001b[0m, in \u001b[0;36mtrain\u001b[0;34m(model, train_loader, val_loader, loss_function, optim, epochs, device)\u001b[0m\n\u001b[1;32m     12\u001b[0m logits \u001b[39m=\u001b[39m model(x)\n\u001b[1;32m     13\u001b[0m \u001b[39mprint\u001b[39m(logits\u001b[39m.\u001b[39mshape)\n\u001b[0;32m---> 14\u001b[0m loss \u001b[39m=\u001b[39m loss_function(logits, y)\n\u001b[1;32m     15\u001b[0m optim\u001b[39m.\u001b[39mzero_grad()\n\u001b[1;32m     16\u001b[0m loss\u001b[39m.\u001b[39mbackward()\n",
+      "File \u001b[0;32m~/ml_accel/lib/python3.9/site-packages/torch/nn/functional.py:3053\u001b[0m, in \u001b[0;36mcross_entropy\u001b[0;34m(input, target, weight, size_average, ignore_index, reduce, reduction, label_smoothing)\u001b[0m\n\u001b[1;32m   3051\u001b[0m \u001b[39mif\u001b[39;00m size_average \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mor\u001b[39;00m reduce \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m   3052\u001b[0m     reduction \u001b[39m=\u001b[39m _Reduction\u001b[39m.\u001b[39mlegacy_get_string(size_average, reduce)\n\u001b[0;32m-> 3053\u001b[0m \u001b[39mreturn\u001b[39;00m torch\u001b[39m.\u001b[39;49m_C\u001b[39m.\u001b[39;49m_nn\u001b[39m.\u001b[39;49mcross_entropy_loss(\u001b[39minput\u001b[39;49m, target, weight, _Reduction\u001b[39m.\u001b[39;49mget_enum(reduction), ignore_index, label_smoothing)\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: Expected target size [32, 8000], got [32, 8]"
+     ]
+    }
+   ],
+   "source": [
+    "train_loss, val_loss = train(model, train_loader, val_loader, torch.nn.functional.cross_entropy, optimizer, NUM_EPOCHS, DEVICE)"
    ]
   }
  ],
