--- a/notebooks/encoder_only_classification.ipynb
+++ b/notebooks/encoder_only_classification.ipynb
@@ -251,7 +251,156 @@
       "Epoch 3 / 50\n",
       "----------\n",
       "Step: 1000, average training loss over last 2000 steps: 0.2559\n",
-      "Step: 2000, average training loss over last 2000 steps: 0.2779\n"
+      "Step: 2000, average training loss over last 2000 steps: 0.2779\n",
+      "Step: 3000, average training loss over last 2000 steps: 0.2843\n",
+      "Step: 4000, average training loss over last 2000 steps: 0.2816\n",
+      "Step: 5000, average training loss over last 2000 steps: 0.2770\n",
+      "Step: 6000, average training loss over last 2000 steps: 0.2777\n",
+      "Step: 7000, average training loss over last 2000 steps: 0.2873\n",
+      "Step: 8000, average training loss over last 2000 steps: 0.2769\n",
+      "Step: 9000, average training loss over last 2000 steps: 0.2761\n",
+      "Step: 10000, average training loss over last 2000 steps: 0.2780\n",
+      "Step: 11000, average training loss over last 2000 steps: 0.2894\n",
+      "Step: 12000, average training loss over last 2000 steps: 0.2743\n",
+      "Epoch: 3, validation loss: 0.2900, val accuracy: 90.27\n",
+      "Epoch 4 / 50\n",
+      "----------\n",
+      "Step: 1000, average training loss over last 2000 steps: 0.2559\n",
+      "Step: 2000, average training loss over last 2000 steps: 0.2549\n",
+      "Step: 3000, average training loss over last 2000 steps: 0.2514\n",
+      "Step: 4000, average training loss over last 2000 steps: 0.2658\n",
+      "Step: 5000, average training loss over last 2000 steps: 0.2640\n",
+      "Step: 6000, average training loss over last 2000 steps: 0.2681\n",
+      "Step: 7000, average training loss over last 2000 steps: 0.2636\n",
+      "Step: 8000, average training loss over last 2000 steps: 0.2762\n",
+      "Step: 9000, average training loss over last 2000 steps: 0.2652\n",
+      "Step: 10000, average training loss over last 2000 steps: 0.2692\n",
+      "Step: 11000, average training loss over last 2000 steps: 0.2574\n",
+      "Step: 12000, average training loss over last 2000 steps: 0.2582\n",
+      "Epoch: 4, validation loss: 0.2837, val accuracy: 90.63\n",
+      "Epoch 5 / 50\n",
+      "----------\n",
+      "Step: 1000, average training loss over last 2000 steps: 0.2425\n",
+      "Step: 2000, average training loss over last 2000 steps: 0.2406\n",
+      "Step: 3000, average training loss over last 2000 steps: 0.2481\n",
+      "Step: 4000, average training loss over last 2000 steps: 0.2521\n",
+      "Step: 5000, average training loss over last 2000 steps: 0.2500\n",
+      "Step: 6000, average training loss over last 2000 steps: 0.2570\n",
+      "Step: 7000, average training loss over last 2000 steps: 0.2578\n",
+      "Step: 8000, average training loss over last 2000 steps: 0.2551\n",
+      "Step: 9000, average training loss over last 2000 steps: 0.2614\n",
+      "Step: 10000, average training loss over last 2000 steps: 0.2706\n",
+      "Step: 11000, average training loss over last 2000 steps: 0.2645\n",
+      "Step: 12000, average training loss over last 2000 steps: 0.2625\n",
+      "Epoch: 5, validation loss: 0.2967, val accuracy: 90.37\n",
+      "Epoch 6 / 50\n",
+      "----------\n",
+      "Step: 1000, average training loss over last 2000 steps: 0.2248\n",
+      "Step: 2000, average training loss over last 2000 steps: 0.2315\n",
+      "Step: 3000, average training loss over last 2000 steps: 0.2410\n",
+      "Step: 4000, average training loss over last 2000 steps: 0.2471\n",
+      "Step: 5000, average training loss over last 2000 steps: 0.2339\n",
+      "Step: 6000, average training loss over last 2000 steps: 0.2588\n",
+      "Step: 7000, average training loss over last 2000 steps: 0.2425\n",
+      "Step: 8000, average training loss over last 2000 steps: 0.2568\n",
+      "Step: 9000, average training loss over last 2000 steps: 0.2637\n",
+      "Step: 10000, average training loss over last 2000 steps: 0.2674\n",
+      "Step: 11000, average training loss over last 2000 steps: 0.2457\n",
+      "Step: 12000, average training loss over last 2000 steps: 0.2553\n",
+      "Epoch: 6, validation loss: 0.3094, val accuracy: 89.95\n",
+      "Epoch 7 / 50\n",
+      "----------\n",
+      "Step: 1000, average training loss over last 2000 steps: 0.2227\n",
+      "Step: 2000, average training loss over last 2000 steps: 0.2379\n",
+      "Step: 3000, average training loss over last 2000 steps: 0.2462\n",
+      "Step: 4000, average training loss over last 2000 steps: 0.2424\n",
+      "Step: 5000, average training loss over last 2000 steps: 0.2411\n",
+      "Step: 6000, average training loss over last 2000 steps: 0.2403\n",
+      "Step: 7000, average training loss over last 2000 steps: 0.2432\n",
+      "Step: 8000, average training loss over last 2000 steps: 0.2640\n",
+      "Step: 9000, average training loss over last 2000 steps: 0.2483\n",
+      "Step: 10000, average training loss over last 2000 steps: 0.2590\n",
+      "Step: 11000, average training loss over last 2000 steps: 0.2451\n",
+      "Step: 12000, average training loss over last 2000 steps: 0.2486\n",
+      "Epoch: 7, validation loss: 0.2952, val accuracy: 90.11\n",
+      "Epoch 8 / 50\n",
+      "----------\n",
+      "Step: 1000, average training loss over last 2000 steps: 0.2267\n",
+      "Step: 2000, average training loss over last 2000 steps: 0.2195\n",
+      "Step: 3000, average training loss over last 2000 steps: 0.2303\n",
+      "Step: 4000, average training loss over last 2000 steps: 0.2316\n",
+      "Step: 5000, average training loss over last 2000 steps: 0.2304\n",
+      "Step: 6000, average training loss over last 2000 steps: 0.2388\n",
+      "Step: 7000, average training loss over last 2000 steps: 0.2550\n",
+      "Step: 8000, average training loss over last 2000 steps: 0.2523\n",
+      "Step: 9000, average training loss over last 2000 steps: 0.2589\n",
+      "Step: 10000, average training loss over last 2000 steps: 0.2482\n",
+      "Step: 11000, average training loss over last 2000 steps: 0.2555\n",
+      "Step: 12000, average training loss over last 2000 steps: 0.2589\n",
+      "Epoch: 8, validation loss: 0.2906, val accuracy: 90.38\n",
+      "Epoch 9 / 50\n",
+      "----------\n",
+      "Step: 1000, average training loss over last 2000 steps: 0.2284\n",
+      "Step: 2000, average training loss over last 2000 steps: 0.2155\n",
+      "Step: 3000, average training loss over last 2000 steps: 0.2244\n",
+      "Step: 4000, average training loss over last 2000 steps: 0.2260\n",
+      "Step: 5000, average training loss over last 2000 steps: 0.2347\n",
+      "Step: 6000, average training loss over last 2000 steps: 0.2445\n",
+      "Step: 7000, average training loss over last 2000 steps: 0.2489\n",
+      "Step: 8000, average training loss over last 2000 steps: 0.2568\n",
+      "Step: 9000, average training loss over last 2000 steps: 0.2401\n",
+      "Step: 10000, average training loss over last 2000 steps: 0.2455\n",
+      "Step: 11000, average training loss over last 2000 steps: 0.2489\n",
+      "Step: 12000, average training loss over last 2000 steps: 0.2325\n",
+      "Epoch: 9, validation loss: 0.2998, val accuracy: 90.23\n",
+      "Epoch 10 / 50\n",
+      "----------\n",
+      "Step: 1000, average training loss over last 2000 steps: 0.2287\n",
+      "Step: 2000, average training loss over last 2000 steps: 0.2197\n",
+      "Step: 3000, average training loss over last 2000 steps: 0.2354\n",
+      "Step: 4000, average training loss over last 2000 steps: 0.2253\n",
+      "Step: 5000, average training loss over last 2000 steps: 0.2308\n",
+      "Step: 6000, average training loss over last 2000 steps: 0.2296\n",
+      "Step: 7000, average training loss over last 2000 steps: 0.2291\n",
+      "Step: 8000, average training loss over last 2000 steps: 0.2437\n",
+      "Step: 9000, average training loss over last 2000 steps: 0.2685\n",
+      "Step: 10000, average training loss over last 2000 steps: 0.2442\n",
+      "Step: 11000, average training loss over last 2000 steps: 0.2465\n",
+      "Step: 12000, average training loss over last 2000 steps: 0.2297\n",
+      "Epoch: 10, validation loss: 0.3024, val accuracy: 90.25\n",
+      "Epoch 11 / 50\n",
+      "----------\n",
+      "Step: 1000, average training loss over last 2000 steps: 0.2256\n",
+      "Step: 2000, average training loss over last 2000 steps: 0.2089\n",
+      "Step: 3000, average training loss over last 2000 steps: 0.2352\n",
+      "Step: 4000, average training loss over last 2000 steps: 0.2370\n",
+      "Step: 5000, average training loss over last 2000 steps: 0.2216\n",
+      "Step: 6000, average training loss over last 2000 steps: 0.2318\n",
+      "Step: 7000, average training loss over last 2000 steps: 0.2336\n",
+      "Step: 8000, average training loss over last 2000 steps: 0.2400\n",
+      "Step: 9000, average training loss over last 2000 steps: 0.2412\n",
+      "Step: 10000, average training loss over last 2000 steps: 0.2461\n",
+      "Step: 11000, average training loss over last 2000 steps: 0.2520\n",
+      "Step: 12000, average training loss over last 2000 steps: 0.2344\n",
+      "Epoch: 11, validation loss: 0.3007, val accuracy: 90.42\n",
+      "Epoch 12 / 50\n",
+      "----------\n",
+      "Step: 1000, average training loss over last 2000 steps: 0.2084\n",
+      "Step: 2000, average training loss over last 2000 steps: 0.2315\n",
+      "Step: 3000, average training loss over last 2000 steps: 0.2223\n",
+      "Step: 4000, average training loss over last 2000 steps: 0.2393\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "CUDA error: unspecified launch failure\nCUDA kernel errors might be asynchronously reported at some other API call, so the stacktrace below might be incorrect.\nFor debugging consider passing CUDA_LAUNCH_BLOCKING=1.\nCompile with `TORCH_USE_CUDA_DSA` to enable device-side assertions.\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[40], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m train_loss, val_loss \u001b[39m=\u001b[39m train(model, train_loader, val_loader, torch\u001b[39m.\u001b[39;49mnn\u001b[39m.\u001b[39;49mfunctional\u001b[39m.\u001b[39;49mcross_entropy, optimizer, NUM_EPOCHS, DEVICE)\n",
+      "Cell \u001b[0;32mIn[38], line 17\u001b[0m, in \u001b[0;36mtrain\u001b[0;34m(model, train_loader, val_loader, loss_function, optim, epochs, device)\u001b[0m\n\u001b[1;32m     15\u001b[0m loss\u001b[39m.\u001b[39mbackward()\n\u001b[1;32m     16\u001b[0m optim\u001b[39m.\u001b[39mstep()\n\u001b[0;32m---> 17\u001b[0m running_loss \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m loss\u001b[39m.\u001b[39;49mitem()\n\u001b[1;32m     18\u001b[0m losses\u001b[39m.\u001b[39mappend(loss)\n\u001b[1;32m     20\u001b[0m \u001b[39mif\u001b[39;00m (i\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m) \u001b[39m%\u001b[39m \u001b[39m1000\u001b[39m \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: CUDA error: unspecified launch failure\nCUDA kernel errors might be asynchronously reported at some other API call, so the stacktrace below might be incorrect.\nFor debugging consider passing CUDA_LAUNCH_BLOCKING=1.\nCompile with `TORCH_USE_CUDA_DSA` to enable device-side assertions.\n"
      ]
     }
    ],
